base/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: con339-egress
  namespace: con339
spec:
  podSelector: {}
  policyTypes:
    - Egress
  egress:
    - {}
